tests/compile-fail/stacked_borrows/alias_through_mutation.stderr
error: Undefined Behavior: attempting a read access using <BORROW_IDX> at ALLOC[0x0], but that tag does not exist in the borrow stack for this location
  --> $DIR/alias_through_mutation.rs:LL:CC
   |
LL |     let _val = *target_alias; //~ ERROR borrow stack
   |                ^^^^^^^^^^^^^
   |                |
   |                attempting a read access using <BORROW_IDX> at ALLOC[0x0], but that tag does not exist in the borrow stack for this location
   |                this error occurs as part of an access at ALLOC[0x0..0x4]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
help: <BORROW_IDX> was created by a retag at offsets [0x0..0x4]
  --> $DIR/alias_through_mutation.rs:LL:CC
   |
LL |     unsafe { *x = &mut *(target as *mut _); }
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^
help: <BORROW_IDX> was later invalidated at offsets [0x0..0x4]
  --> $DIR/alias_through_mutation.rs:LL:CC
   |
LL |     *target = 13;
   |     ^^^^^^^^^^^^
   = note: inside `main` at $DIR/alias_through_mutation.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

